--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users.html
@@ -104,7 +104,9 @@
 					<a class="fa-regular fa-pen-to-square fa-2x icon-green" th:href="@{'/users/edit/' + ${user.id}}"
 					title="Edit this user"></a>
 						 &nbsp;
-					<a class="fa-solid fa-trash fa-2x icon-dark" href=""></a>
+					<a class="fa-solid fa-trash fa-2x icon-dark link-delete" th:href="@{'/users/delete/' + ${user.id}}"
+					th:userId="${user.id}"
+					title="Delete this user"></a>
 					</td>
 				</tr>
 			</tbody>
@@ -112,11 +114,48 @@
 	
 	</div>
 	
+	<div class="modal fade text-center" id="confirmModal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Delete Confirmation</h4>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				
+				<div class="modal_body">
+					<span id="confirmText"></span>
+				</div>
+				
+				<div class="modal-footer">
+				<a class=" btn btn-success" href="" id="yesButton">Yes</a>
+					<button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+				</div>
+				
+			</div>
+		</div>
+	</div>
+	
 	<div class="text-center">
 		<p>Shopme Control Panel - Copyright &copy; Shopme</p>
 	</div>
 
 </div>
+
+<script type="text/javascript">
+ $(document).ready(function(){
+	$(".link-delete").on("click", function(e){
+	e.preventDefault();
+	link = $(this);
+	userId = link.attr("userId");
+	//alert($(this).attr("href"));
+	$("#yesButton").attr("href", link.attr("href"));
+	$("#confirmText").text("Are you sure you want to delete this User with ID: " + userId + "?");
+	$("#confirmModal").modal();
 	
+});
+});
+
+
+</script>
 </body>
 </html>
