--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/login.html
@@ -23,6 +23,10 @@
 				
 				</p>
 			</div>
+			<div th:if="${param.logout}">
+				<p class="text-warning">You have been logged out.</p>
+			</div>
+			
 
 			<div class="border border-secondary rounded p-3">
 				<p>Access to Shopme Control Panel</p>
