account update ready

--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -57,8 +57,9 @@
 					<span class="fa-solid fa-user fa-2x icon-silver"></span>
 				</li>
 				
-				<li class="nav-item-dropdown">
+				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+					th:href = "@{/account}"
 					sec:authentication="principal.fullname"></a>
 					<div class="dropdown-menu">
 						<a class="dropdown-item" id="logoutLink" href="">Logout</a>
