--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -9,6 +9,11 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 	</div>
 	<div>
 		<h1>Shopme Control Panel</h1>
+		Welcome
+		<a th:href = "@{/account}"
+			sec:authentication="principal.fullname"></a>
+			&nbsp;
+			<span sec:authentication = "principal.authorities"></span>
 	</div>
 	
 	<div th:replace="fragments :: footer">
