--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -20,12 +20,16 @@
 		</button>
 		<div class="collapse navbar-collapse" id="topNavbar">
 			<ul class="navbar-nav">
-				<li class="nav-item">
+				<li class="nav-item" sec:authorize = "hasAuthority('Admin')">
 					<a class="nav-link" th:href="@{/users}">Users</a>
 				</li>
+				
+				<th:block sec:authorize="hasAnyAuthority('Admin','Editor')">
 				<li class="nav-item">
 					<a class="nav-link" th:href="@{/categories}">Categories</a>
 				</li>
+				</th:block>
+				
 				<li class="nav-item">
 					<a class="nav-link" th:href="@{/brands}">Brands</a>
 				</li>
@@ -50,7 +54,7 @@
 				<li class="nav-item">
 					<a class="nav-link" th:href="@{/menus}">Menus</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item" sec:authorize = "hasAuthority('Admin')">
 					<a class="nav-link" th:href="@{/settings}">Settings</a>
 				</li>
 				<li class="nav-item">
