--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/categories/categories_form.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/categories/categories_form.html
@@ -51,12 +51,12 @@
 						<input type="hidden" th:field="*{image}" />
 						 <input type="file"
 							id="fileImage" name="fileImage" accept="image/png, image/jpeg"
-							required
+							th:required = "${category.imagePath == null}"
 							class="mb-2" />
 
 						<div class="mt-2">
 							<img id="thumbnail" alt="Photos preview"
-								th:src="@{/images/default-user.png}" class="img-fluid" />
+								th:src="@{${category.imagePath}}" class="img-fluid" />
 						</div>
 					</div>
 				</div>
@@ -108,9 +108,33 @@
 		<div th:replace="fragments :: footer "></div>
 
 	</div>
-	<script type="text/javascript">
+<script type="text/javascript">
 		moduleURL = "[[@{/categories}]]"
-	</script>
+		
+			$("#fileImage").change(function(){
+				fileSize = this.files[0].size;
+
+				
+				if(fileSize > 1048576){
+					this.setCustomValidity("You must choose an image less than 1MB!");
+					this.reportValidity();
+				} else {
+					this.setCustomValidity("");
+					showImageThumbnail(this);
+				}
+
+		});
+			
+			function showImageThumbnail(fileInput){
+				var file = fileInput.files[0];
+				var reader = new FileReader();
+				reader.onload = function(e){
+					$("#thumbnail").attr("src",e.target.result);
+			};
+			reader.readAsDataURL(file);
+		}
+		
+</script>
 
 </body>
 </html>
