sort in categories done

--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/categories/categories.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/categories/categories.html
@@ -44,7 +44,13 @@
 				<tr>
 					<th>ID</th>
 					<th>Category Image</th>
-					<th>Category Name</th>
+					<th>
+						
+						<a class="text-white" th:href = "@{'/categories?sortDir=' + ${reverseSortDir}}">Category Name</a>
+						<span 
+						th:class="${reverseSortDir == 'desc' ? 'fa-solid fa-sort-up' : 'fa-solid fa-sort-down'}">
+						</span>
+					</th>
 					<th>Alias</th>
 					<th>Enabled</th>
 					<th></th>
